se crea la directiva del titular

--- a/app/jade/init.jade
+++ b/app/jade/init.jade
@@ -1,4 +1,7 @@
 div(ng-controller="Init")
     h3.page-header Titular asegurado
 
-    div(titular)
+    div(
+        titular,
+        titular-beneficiario-preferente="true"
+    )
