--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,2 +1,3 @@
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss";
+@import "variables.scss";
 @import "style.scss";
