se agrega servicio tooltipTemplatesHandling

--- a/app/jade/tooltips/mensajePrueba.jade
+++ b/app/jade/tooltips/mensajePrueba.jade
@@ -3,6 +3,6 @@ div
         strong
             | Tooltip
     p
-        | Esto es un mensaje de Tooltip.
+        | Esto es un mensaje de Tooltip de prueba.
     p
         | Saludos!!!
